# codeshare_sf

./: README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 01dcfde80a15_create_user_and_codesnippet_tables.py  780eeee6b259_initial_migration.py  a3f6c0072d1c_user_model.py
api/: __init__.py
api/v1/: auth.py  code_snippets.py  user.py
auth/: auth.py
core/: config.py  logger.py
db/: db.py
models/: ___init__.py  code_snippets.py  user.py
schemas/: snippets.py  user.py
services/: code_snippets.py
